--- a/bio.html
+++ b/bio.html
@@ -46,7 +46,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
 
   <br><br>
-  <span style="color:orangered;"><i>I will join <a href="https://www.sutd.edu.sg/">SUTD</a> as an Assistant Professor in early 2025. I am actively looking for highly motivated PhD students (2025 Fall) / Research Assistants / Visiting students, check out <a href=
+  <span style="color:orangered;"><i>I will join <a href="https://www.sutd.edu.sg/">SUTD</a> as a <a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professor (SAP)</a> in early 2025. I am actively looking for highly motivated PhD students (2025 Fall) and Visiting students, check out <a href=
   isakzhang.github.io/getinvolved.html">this page</a> on how to get involved.</i></span>
   
   <!-- 
