--- a/bio.html
+++ b/bio.html
@@ -84,12 +84,11 @@ PLS ask for permission & add a link to this website before you directly copy and
   <h3><a name="bio"></a>Short Bio</h3>
   
   <br>
-  Dr. Wenxuan Zhang is an incoming tenure-track assistant professor  at the Information Systems Technology and Design (ISTD) pillar, Singapore University of Technology and Design (SUTD). He is currently a research scientist at Alibaba DAMO Academy in Singapore. He received his Ph.D. degree from the Chinese University of Hong Kong supervised by Prof. Wai Lam, and then joined Alibaba Singapore with the Ali Star award. His primary research areas are natural language processing (NLP) and trustworthy AI. His research aims to advance NLP models that are inclusive, supporting diverse languages and cultures through multilingual language models, while also trustworthy by improving the understanding, safety, and robustness of the models. He has published over 40 papers in top-tier AI conferences and journals, including ICLR, NeurIPS, ACL, EMNLP, SIGIR, WWW, TOIS, and TKDE. He is the tech lead of the SeaLLMs project (Large Language Models specialized for Southeast Asian languages), which has received significant community attention with over 250k downloads. His multiple papers have been recognized as among the top 2% or top 3% most cited at their respective conferences. He also regularly serves as an area chair and on program committees for multiple leading conferences and journals.
-
+  Dr Wenxuan Zhang is currently a tenure-track SUTD Assistant Professor (SAP) at the Information Systems Technology and Design (ISTD) pillar, Singapore University of Technology and Design (SUTD). He received his PhD degree from the Chinese University of Hong Kong, and then joined Alibaba Singapore as a research scientist with the prestigious Ali Star award. His primary research areas are natural language processing (NLP) and large language models (LLMs). His research aims to advance NLP models that are inclusive, supporting diverse languages and cultures through multilingual language models; while also trustworthy by improving the understanding, safety, and robustness of the models. He (co-)led multiple influential open-source research projects, including SeaLLMs (LLMs specialized for Southeast Asian languages, with 300k+ model downloads), Babel (general multilingual large language models serving over 90% global speakers), M3Exam, and AutoArena. He has published over 40 papers in top-tier AI conferences and journals, where multiple papers have been recognized as among the top 2% or top 3% most cited at their respective conferences. He also regularly serves as an area chair and on program committees for multiple leading conferences and journals.
 </div>
 
 <div id='footer'>
-  <p style="text-align:center;">Last updated: Dec 2024</p>
+  <p style="text-align:center;">Last updated: Feb 2025</p>
 </div>
 
 </body>
