--- a/bio.html
+++ b/bio.html
@@ -37,7 +37,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <div class="home">
 
   <div class="mini-intro">
-  <img class="avatar" src="img/wxzhang-2025-square.jpg" alt="wxzhang-photo">
+  <img class="avatar" src="img\Phan_sgp.jpg" alt="wxzhang-photo">
 
   <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
   
